# xserve-nas

./: LICENSE
code/activityled/: activityled.ino
code/controlplane/: Cargo.toml  Makefile  README.md
code/controlplane/.cargo/: config.toml
code/controlplane/cross/: Cargo.toml
code/controlplane/cross/.cargo/: config.toml
code/controlplane/cross/src/: led.rs  led_driver.rs  lib.rs  shift_register.rs
code/controlplane/src/: dma.rs  led.rs  led_driver.rs  main.rs  shift_register.rs
kicad/: .gitignore
kicad/front_L/: front_L.kicad_pro  front_L.kicad_sch
kicad/front_R/: front_R.kicad_pro  front_R.kicad_sch
kicad/frontpanel-left/: frontpanel-left.kicad_pro
kicad/lightshow_V0/lightshow/: C2961656.kicad_sym  C965848.kicad_sym  fp-lib-table  lightshow.kicad_pcb  lightshow.kicad_pro  lightshow.kicad_sch  push_button.kicad_sym  sym-lib-table  untitled.kicad_sch
kicad/lightshow_V1/: fp-lib-table  lightshow.kicad_pcb  lightshow.kicad_pro  lightshow.kicad_sch  sym-lib-table
kicad/lightshow_V1/C965848.pretty/: LED-SMD_4P-L2.0-W1.3-BR.kicad_mod
kicad/lightshow_V1/footprints.pretty/: push_button.kicad_mod
kicad/lightshow_V1/production/: netlist.ipc
kicad/lightshow_V2/: C41327.kicad_sym  fp-lib-table  freerouting.frb  left+right.kicad_pcb  left+right.kicad_pro  lightshow.kicad_pcb  lightshow.kicad_pro  lightshow.kicad_sch  sym-lib-table
kicad/lightshow_V2/C41327.pretty/: SOIC-28_L17.9-W7.5-P1.27-LS10.3-BL.kicad_mod
kicad/lightshow_V2/TB62747AFG/: TB62747AFG_C8_EL.dcm  TB62747AFG_C8_EL.kicad_sym  TB62747AFG_C8_EL.lib  TB62747AFG_C8_EL.mod
kicad/lightshow_V2/conn_left/: conn_left.kicad_pcb  conn_left.kicad_pro  conn_left.kicad_sch  fp-lib-table
kicad/lightshow_V2/conn_right/: button.kicad_sym  conn_right.kicad_pcb  conn_right.kicad_pro  conn_right.kicad_sch  fp-lib-table  sym-lib-table
kicad/lightshow_V2/footprints.pretty/: LED RGB XINGLIGHT XL-2012RGBC 0805.kicad_mod
kicad/lightshow_V2/production/: netlist.ipc
kicad/qr.pretty/: qr.kicad_mod
kicad/sata_caddy/: 47018-4002.kicad_sym  fp-lib-table  sata_caddy.kicad_pcb  sata_caddy.kicad_pro  sata_caddy.kicad_sch  sata_connectors.kicad_sym  sym-lib-table
kicad/sata_caddy/ 47018-4002.pretty/: MOLEX_47018-4002.kicad_mod
kicad/sata_caddy/plots/: sata_caddy-B_Mask.gbs  sata_caddy-B_Silkscreen.gbo  sata_caddy-Edge_Cuts.gm1  sata_caddy-F_Cu.gtl  sata_caddy-F_Mask.gts  sata_caddy-F_Silkscreen.gto  sata_caddy-NPTH-drl_map.gbr
kicad/sata_caddy_V2/: 47018-4002-cut.kicad_sym  47018-4002.step  ATTINY25-20SSU.kicad_sym  MCP6006RT-E_OT.kicad_sym  fp-lib-table  sata_caddy_V2.kicad_pcb  sata_caddy_V2.kicad_pro  sata_caddy_V2.kicad_sch  sym-lib-table  ~sata_caddy_V2.kicad_pcb.lck
kicad/xserve_raid_controlplane/: blackpill.kicad_sym  fp-lib-table  sym-lib-table  xserve_raid_controlplane.kicad_pcb  xserve_raid_controlplane.kicad_pro  xserve_raid_controlplane.kicad_sch
(+30 files in other folders)
